# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = 'winvoice-server'
version = '0.6.2'
authors = ['Iron-E <code.iron.e@gmail.com>']
description = 'HTTPS server to run Winvoice commands on from any frontend'

categories = ['command-line-utilities', 'database', 'web-programming::http-server']
edition = '2021'
keywords = ['backend', 'cli', 'command', 'command-line', 'freelance', 'invoice', 'line', 'server']
license = 'GPL3'
readme = 'README.md'
repository = 'https://www.github.com/Iron-E/winvoice-server'

[dependencies]
argon2 = {features = ['std'], version = '0.5'}
async-trait = {optional = true, version = '0.1'}
axum = {features = ['headers'], optional = true, version = '0.6'}
axum-login = {features = ['sqlx'], optional = true, version = '0.5'}
axum-server = {optional = true, features = ['tls-rustls'], version = '0.5'}
casbin = {optional = true, version = '2'}
clap = {features = ['derive', 'env'], optional = true, version = '4'}
dirs = {optional = true, version = '5'}
futures = {optional = true, version = '0.3'}
humantime = {optional = true, version = '2'}
humantime-serde = '1'
money2 = {features = ['history', 'serde'], optional = true, version = '1'}
rand = {optional = true, version = '0.8'}
semver = {optional = true, version = '1'}
serde = '1'
sqlx = {features = ['json', 'offline', 'runtime-tokio-rustls', 'tls'], optional = true, version = '0.6'}
tokio = {features = ['macros', 'rt-multi-thread'], optional = true, version = '1'}
tower = {features = ['timeout'], optional = true, version = '0.4'}
tracing = {optional = true, version = '0.1'}
tracing-appender = {optional = true, version = '0.2'}
tracing-subscriber = {optional = true, version = '0.3'}
watchman_client = {optional = true, version = '0.8'}

[dependencies.tower-http]
features = ['compression-br', 'compression-deflate', 'compression-gzip', 'compression-zstd', 'cors', 'trace']
optional = true
version = '0.4'

[dependencies.winvoice-adapter]
branch = 'release/0.28'
default-features = false
git = 'https://github.com/Iron-E/winvoice-adapter'
optional = true

[dependencies.winvoice-adapter-postgres]
branch = 'release/0.20'
git = 'https://github.com/Iron-E/winvoice-adapter-postgres'
optional = true

[dependencies.winvoice-export]
branch = 'release/0.8'
features = ['markdown', 'serde']
git = 'https://github.com/Iron-E/winvoice-export'

[dependencies.winvoice-match]
branch = 'release/0.15'
features = ['serde']
git = 'https://github.com/Iron-E/winvoice-match'

[dependencies.winvoice-schema]
branch = 'release/0.16'
features = ['serde']
git = 'https://github.com/Iron-E/winvoice-schema'

[dev-dependencies]
axum-test-helper = {version = '0.3', default-features = false, features = ['cookies', 'withouttrace']}
csv = "1"
dotenvy = '0.15'
mockd = {features = ["address", "company", "contact", "currency", "datetime", "internet", "job", "password", "name", "words"], version = "0.4"}
pretty_assertions = '1'
regex = "1"
serde_json = "1"
tracing-test = {features = ['no-env-filter'], version = '0.2'}

[features]
bin = [
	'async-trait',
	'axum',
	'axum-login',
	'axum-server',
	'casbin',
	'clap',
	'dirs',
	'futures',
	'humantime',
	'money2',
	'rand',
	'semver',
	'sqlx',
	'tokio',
	'tower',
	'tower-http',
	'tracing',
	'tracing-appender',
	'tracing-subscriber',
	'winvoice-adapter',
]
default = ['postgres', 'watchman']
postgres = ['axum-login/postgres', 'bin', 'winvoice-adapter-postgres', 'sqlx/postgres']
test-postgres = ['postgres', 'winvoice-adapter-postgres/test-utils']
watchman = ['watchman_client']

[patch.crates-io.sqlx]
git = "https://github.com/Iron-E/sqlx"
branch = "release/0.6.3-patched"
